--- a/PlannerAppClient/Pages/Plans/Plans.razor
+++ b/PlannerAppClient/Pages/Plans/Plans.razor
@@ -3,6 +3,7 @@
 
 @attribute [Authorize]
 @inject PlanService planService
+@inject NavigationManager navigationManager
 
 @if (string.IsNullOrEmpty(query))
 {
@@ -32,19 +33,29 @@ else
         @foreach (var plan in plans)
         {
             <div class="col-4">
-
-                <RadzenCard Style="margin:10px">
+                <RadzenCard Style="margin:8px">
                     <img src="@plan.CoverPath" style="width: 90%; margin:5px;" />
                     <h2>@plan.Title</h2>
                     <p>@plan.Description</p>
+                    <hr />
                     <div class="row">
                         <div class="col-6">
-                            <RadzenButton ButtonStyle="Radzen.ButtonStyle.Success" Text="Edit" class="btn-block"></RadzenButton>
+                            <RadzenButton ButtonStyle="Radzen.ButtonStyle.Success" Text="Edit"
+                                          Click='() => navigationManager.NavigateTo($"/plans/details/{plan.Id}")' class="btn-block"></RadzenButton>
                         </div>
                         <div class="col-6">
-                            <RadzenButton ButtonStyle="Radzen.ButtonStyle.Danger" Text="Delete" class="btn-block"></RadzenButton>
+                            <RadzenButton ButtonStyle="Radzen.ButtonStyle.Danger" Text="Delete" class="btn-block"
+                                          Click="()=> selectPlan(plan.Id)"></RadzenButton>
                         </div>
                     </div>
+                    @if (selectedPlanId == plan.Id)
+                    {
+                        <div class="row">
+                            <div class="col-12"></div>
+                            <RadzenButton ButtonStyle="Radzen.ButtonStyle.Info" Text="Confirm" class="btn-block"
+                                          Click="async () => await deletePlanAsync()" Style="margin: 5px"></RadzenButton>
+                        </div>
+                    }
                 </RadzenCard>
             </div>
         }
@@ -137,6 +148,30 @@ else
         pageNumber = newPageNumber;
         await getPlansAsync();
 
+    }
+
+    string selectedPlanId = string.Empty;
+
+    public void selectPlan(string id)
+    {
+        selectedPlanId = id;
+    }
+
+    public async Task deletePlanAsync()
+    {
+        isBusy = true;
+
+        var result = await planService.DeletePlanAsync(selectedPlanId);
+        if (result.IsSuccess)
+        {
+            var deletedPlan = plans.SingleOrDefault(p => p.Id == selectedPlanId);
+            plans.Remove(deletedPlan);
+        }
+        else {
+            await getPlansAsync();
+        }
+
+        isBusy = false;
     }
 
     protected override async Task OnInitializedAsync()
